syntax = "proto3";

package pollution;

// Environment Data message
message EnvironmentData{

    string locationId = 1;   // id of the location, simulation of coordinates
    double temperature = 2;  // temperature data
    double humidity = 3;     // humidity data
    double air_quality = 4;   // air quality data
    double noiseLevel = 5;   // noise level data

}// end of EnvironmentData

// Pollution Monitoring services
service EnvironmentServices{

    // Pollution Monitoring services
    rpc HospitalEnvironmentService(EnvironmentData) returns (stream EnvironmentData){}

    // building pollution monitor services
    rpc BuildingEnvironmentService(EnvironmentData) returns (stream EnvironmentData){}

    // office pollution monitor services
    rpc OfficeEnvironmentService(EnvironmentData) returns (stream EnvironmentData){}

}// end of EnvironmentServices
